--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "font-awesome": "^4.7.0",
+    "mongoose": "^5.7.3",
     "morgan": "~1.7.0",
     "nodemon": "^1.19.2",
     "pug": "~2.0.0-beta6",
+    "readline": "^1.3.0",
     "serve-favicon": "~2.3.0"
   }
 }
