--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loc8r",
+  "name": "movie",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "font-awesome": "^4.7.0",
     "mongoose": "^5.7.3",
     "morgan": "~1.7.0",
-    "nodemon": "^1.19.2",
+    "nodemon": "^1.19.3",
     "pug": "~2.0.0-beta6",
     "readline": "^1.3.0",
     "serve-favicon": "~2.3.0"
