--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.19.4",
     "pug": "~2.0.0-beta6",
     "readline": "^1.3.0",
+    "request": "^2.88.0",
     "serve-favicon": "~2.3.0"
   }
 }
